--- a/exercise/maths/FAA/fundamental algebra and analysis.tex
+++ b/exercise/maths/FAA/fundamental algebra and analysis.tex
@@ -9,6 +9,7 @@
 \newcommand{\NN}{\mathbb{N}}
 \newcommand{\ZZ}{\mathbb{Z}}
 \newcommand{\RR}{\mathbb{R}}
+\newcommand{\CC}{\mathbb{C}}
 \begin{document}
 \section{Basic Logic}
 \begin{enumerate}
@@ -146,5 +147,65 @@ F & F &  F &   T&   T&   T\\ \hline
             \item -
             \item  $f$ increasing $\Leftrightarrow \forall x_1,x_2\in \NN,f(x_1)\le f(x_2)$.Prove by induction.Claim $f(0)=0$.Pf.:If not ,then $f(0)\not=0\Rightarrow f(0)\ge 1$.By increasing,$\forall n>0,f(n)\ge f(0)\ge 1.\forall n\in \NN ,f(n)\not=0,f$ is not surjective.Claim:If $f(n)=n,\forall n\ge m $, then $f(m+1)=m+1$.Pf. $f(m+1)\ge f(m)=m$ .If $f(m+a)=m=f(m)\Rightarrow f $ is not injective.If $f(m+1)>m+1$,then $\forall i >m+1,f(i)\ge f(m+1)>m+1$.     
        \end{enumerate}
+\end{enumerate}
+
+
+\section{Group}
+\begin{enumerate}
+    \item It is communicative and associative.
+    \item It's communicative, but not associative.
+    \item 
+        \begin{enumerate}
+            \item $1+3(x*y)=1+3x+3y+9xy=(1+3x)(1+3y)$
+            \item  Easy to prove it's communicative. $(x*y)*z=x+y+z+3xy+3yz+3zx+9xyz$ , $x,y,z$ are in the same place. Then it's associative.
+            \item $\forall x\in \RR,(x*0)=(0*x)=x$, so $e=0$ is the neutral element in the semigroup.
+            \item $\forall x\not=-\frac{1}{3},y=-\frac{x}{1+3x}$ satisfies $(x*y)=0=e$.
+        \end{enumerate}
+    \item 
+        \begin{enumerate}
+            \item Easy. $e=0$.
+            \item $\forall (x,y)\in \RR_{>0}^2,\sqrt{x^2+y^2}>0=e$. So none of the non-zero element is invertible.
+        \end{enumerate}
+    \item 
+        \begin{enumerate}
+            \item Easy to check it is close.
+            \item Composition of mapping is associative, so it's a semigroup.
+            \item $\forall i\in \{1,2,3,4\}, f_1\circ f_i=f_i=f_i \circ f_1$. So it is a monoid.
+            \item $\forall i \in \{1,2,3,4\}, f_i\circ f_i=f_1$. So it is a group.
+        \end{enumerate}
+    \item 
+        \begin{enumerate}
+            \item $e=(1,0), (\frac{1}{a},-\frac{x}{a})$ is the inverse of $(a,x)$.
+            \item Not communicative.
+            \item Easy.
+        \end{enumerate}
+    \item 
+        \begin{enumerate}
+            \item Not close.
+            \item Not close.
+            \item $e=1$ is the neutral element. $\forall (x,y)\in H^2$, let $x=\frac{q}{p},y=\frac{t}{s},\iota(y)=\frac{s}{t}$, then $x\cdot\iota(y)=\frac{qs}{pt}\in H$. So $(H,\cdot)$ is a group.
+            \item $\forall \sigma\in H,\sigma(x)=x\Rightarrow x=\sigma^{-1}(\sigma(x))=\sigma^{-1}(x)$, so $\sigma^{-1}\in H$. Since we've known $H$ is monoid, $H$ is a group.
+        \end{enumerate}
+    \item We denote $G:=\{a+b\sqrt{2}\mid(a,b)\in \ZZ^2\}$. Take two elements $x=a+b\sqrt{2},y=c+d\sqrt{2}$ from $G$, $x\cdot y=(ac+2bd)+(ad+bc)\sqrt{2}\in G$. The neutral element $e=1$ also in $G$, so it is a submonoid of $(\RR,\cdot)$.
+    \item $\forall z\in \mu_n(\CC),\iota(z)=z^{-1}$. $\forall (z_1,z_2)\in \mu_n(\CC)^2,(z_1 z_2^{-1})^n=z_{1}^{n}(z_{2}^{n})^{-1}=1$, thus $z_1\iota(z_2)\in \mu_{n}(\CC)$. Therefore $\mu_{n}(\CC)$ is a subgroup of $(\CC^\times,\cdot)$.
+    \item 
+        \begin{enumerate}
+            \item Neutral element $e=1$ is in $G:=\{x+y\sqrt{3}\mid x\in \NN,y\in \ZZ,x^2-3y^2=1\}$. If $x+y\sqrt{3}$ is an element of $G$, then $(x+y\sqrt{3})(x-y\sqrt{3})=1$, since $x\ge 0,x+y\sqrt{3}$ and $x-y\sqrt{3}$ can not both be negative. Then they are both positive, so they are both in $\RR_{>0}$. Moreover, They are inverse of each other. $(x+y\sqrt{3})(z-w\sqrt{3})=xz-3yw+(zy-xw)\sqrt{3},x>\sqrt{3}y,z>\sqrt{3}w\Rightarrow xz-3yw>0$. So $xz-3yw\in \NN$. $(x+y\sqrt{3})(z-w\sqrt{3})\in G$. Therefore, it is a subgroup of $(\RR_{>0},\times)$.
+            \item Easy.
+            \item $\frac{97}{56}-\sqrt{3}=\frac{1}{(97+56\sqrt{3})56}$.
+        \end{enumerate}
+    \item 
+        \begin{enumerate}
+            \item $\forall (n,m)\in \ZZ^2,(-1)^n(-1)^m=(-1)^{n+m}$.
+            \item Easy.
+            \item Easy.
+        \end{enumerate}
+    \item 
+        \begin{enumerate}
+            \item Easy to check $e\in \mathrm{Stab}(x)$. $\forall g\in \mathrm{Stab}(x), x=(g^{-1}g)x=g^{-1}(gx)=g^{-1}x$. So $g^{-1}\in \mathrm{Stab}(x)$. Moreover, $\forall (g_1,g_2)\in \mathrm{Stab}(x)^2,g_1g_2^{-1}x=g_1 x=x$, so $g_1g_2^{-1}\in \mathrm{Stab}(x)$. Therefore, $\mathrm{Stab}(x)$ is a subgroup of $G$.
+            \item Claim that: if $\exists g\in G$, $g\in g_1\mathrm{Stab}(x)\wedge g\in g_2\mathrm{Stab}(x)$, then $g_1\mathrm{Stab}(x)=g_2\mathrm{Stab}(x)$. Let $g=g_1s_1=g_2s_2$, then $g_2=g_1s_1\iota(s_2)$. Thus, for any $s\in \mathrm{Stab}(x),g_2s=g_1s_1\iota(s_2)s\in g_1\mathrm{Stab}(x)$.
+                \newline So $g_2\mathrm{Stab}(x)\subseteq g_1\mathrm{Stab}(x)$. resp. we have $g_2\mathrm{Stab}(x)\supseteq g_1\mathrm{Stab}(x)$. Hence $g_2\mathrm{Stab}(x)=g_1\mathrm{Stab}(x)$. If $g_1s_1=g_2s_2, g_1x=g_1s_1x=g_2s_2x=g_2x$. Therefore, they map at the same $gx$.
+            
+        \end{enumerate}
 \end{enumerate}
 \end{document}
