--- a/exercise/maths/FAA/fundamental algebra and analysis.tex
+++ b/exercise/maths/FAA/fundamental algebra and analysis.tex
@@ -157,7 +157,7 @@ F & F &  F &   T&   T&   T\\ \hline
     \item 
         \begin{enumerate}
             \item $1+3(x*y)=1+3x+3y+9xy=(1+3x)(1+3y)$
-            \item  Easy to prove it's communicative. $(x*y)*z=x+y+z+3xy+3yz+3zx+9xyz$ , $x,y,z$ are in the same place. Then it's associative.
+            \item  Easy to prove it's communicative. $(x*y)*z=x+y+z+3xy+3yz+3zx+9xyz$ , $x,y,z$ are in the same position. Then it's associative.
             \item $\forall x\in \RR,(x*0)=(0*x)=x$, so $e=0$ is the neutral element in the semigroup.
             \item $\forall x\not=-\frac{1}{3},y=-\frac{x}{1+3x}$ satisfies $(x*y)=0=e$.
         \end{enumerate}
@@ -205,7 +205,36 @@ F & F &  F &   T&   T&   T\\ \hline
             \item Easy to check $e\in \mathrm{Stab}(x)$. $\forall g\in \mathrm{Stab}(x), x=(g^{-1}g)x=g^{-1}(gx)=g^{-1}x$. So $g^{-1}\in \mathrm{Stab}(x)$. Moreover, $\forall (g_1,g_2)\in \mathrm{Stab}(x)^2,g_1g_2^{-1}x=g_1 x=x$, so $g_1g_2^{-1}\in \mathrm{Stab}(x)$. Therefore, $\mathrm{Stab}(x)$ is a subgroup of $G$.
             \item Claim that: if $\exists g\in G$, $g\in g_1\mathrm{Stab}(x)\wedge g\in g_2\mathrm{Stab}(x)$, then $g_1\mathrm{Stab}(x)=g_2\mathrm{Stab}(x)$. Let $g=g_1s_1=g_2s_2$, then $g_2=g_1s_1\iota(s_2)$. Thus, for any $s\in \mathrm{Stab}(x),g_2s=g_1s_1\iota(s_2)s\in g_1\mathrm{Stab}(x)$.
                 \newline So $g_2\mathrm{Stab}(x)\subseteq g_1\mathrm{Stab}(x)$. resp. we have $g_2\mathrm{Stab}(x)\supseteq g_1\mathrm{Stab}(x)$. Hence $g_2\mathrm{Stab}(x)=g_1\mathrm{Stab}(x)$. If $g_1s_1=g_2s_2, g_1x=g_1s_1x=g_2s_2x=g_2x$. Therefore, they map at the same $gx$.
-            
+            \item By definition, $\forall g\in G,\left|\mathrm{Stab}(x)\right|=\left|g \mathrm{Stab}(x)\right|$.(Lagrange Theorem)
+        \end{enumerate}
+    \item 
+        \begin{enumerate}
+            \item 1.
+            \item By definition, $n\in N(a)$. Hence, $\min(N(a))\le n$.
+            \item Let $p,q\le \mathrm{ord}(a),0\le p<q$. Suppose that $a^p=a^q$, then $e=a^{q-p},(q-p)\in N(a),q-p<\mathrm{ord}(N(a))$, contradiction. Thus they are distinct.
+            \item Let $f:(\ZZ,+)\rightarrow (G,*)$ be the homomorphism, $f(1)=a$, then $\forall n\in \ZZ, a*f(n)=f(n+1)$.
+                \begin{enumerate}
+                    \item Suppose $\left \langle a \right \rangle $ is finite. If $\forall n,m\in \ZZ,f(n)\not=f(m)$, then the image is not finite, contradiction. Take $f(n)=f(m), n<m$, then $a^{m-n}=1$. Thus $\mathrm{ord}(a)\le m-n$ is finite.
+                    \item Suppose $\mathrm{ord}(a)$ is finite. Then $\forall n\in \ZZ, f(n+\mathrm{ord}(a))=f(n)\in\{f(i)\mid i\in \NN,1\le i\le \mathrm{ord}(a) \}$
+                \end{enumerate}
+            \item By (4)(b), $\left|\left \langle a \right \rangle \right|\le \mathrm{ord}(a)$. By (4)(a),$\left|\left \langle a \right \rangle \right|\ge \mathrm{ord}(a)$.
+        \end{enumerate}
+    \item 
+        \begin{enumerate}
+            \item By comm. law $(ab)^{N}=a^N b^N=e, \mathrm{ab}\le N$ is finite.
+            \item -
+            \item -
+        \end{enumerate}
+    \item 
+        \begin{enumerate}
+            \item $e=\mathrm{Id}_E,f\circ f^{-1}=\mathrm{Id}_E$
+            \item $\sigma^0(x)=x$ and composition of mapping is associative.
+            \item Easy.
+            \item -
+        \end{enumerate}
+    \item 
+        \begin{enumerate}
+            \item 
         \end{enumerate}
 \end{enumerate}
 \end{document}
