--- a/exercise/physics/Quantum Mechanics/HW1/HW1.tex
+++ b/exercise/physics/Quantum Mechanics/HW1/HW1.tex
@@ -4,7 +4,7 @@
 \date{2025/09/04}
 \usepackage{amsthm}
 \usepackage{amsmath}
-\newtheoremstyle{t}{0pt}{}{}{}{\bfseries}{}{\newline}{}
+\newtheoremstyle{t}{10pt}{5pt}{}{}{\bfseries}{}{\newline}{}
 \theoremstyle{t}
 \newtheorem{problem}{Problem}
 \usepackage{chngcntr}
